--- a/petmatch-frontend/package.json
+++ b/petmatch-frontend/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@react-spring/web": "^9.7.3",
+    "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
     "framer-motion": "^12.23.25",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^6.23.1",
-    "react-tinder-card": "^1.6.4",
-    "axios": "^1.7.2"
+    "react-tinder-card": "^1.6.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
