--- a/petmatch-backend/src/main/resources/application.yaml
+++ b/petmatch-backend/src/main/resources/application.yaml
@@ -25,3 +25,9 @@ logging:
   level:
     root: INFO
     com.petmatch: DEBUG
+
+# Configuración de Cloudinary
+cloudinary:
+  cloud_name: ${CLOUDINARY_CLOUD_NAME}
+  api_key: ${CLOUDINARY_API_KEY}
+  api_secret: ${CLOUDINARY_API_SECRET}
