--- a/petmatch-frontend/Dockerfile
+++ b/petmatch-frontend/Dockerfile
@@ -2,16 +2,18 @@
 FROM node:20-alpine AS build
 WORKDIR /app
 COPY package*.json ./
-# Usar --legacy-peer-deps para resolver el conflicto de React
 RUN npm install --legacy-peer-deps
 COPY . .
+# Pasar la URL de la API como argumento de construcción a Vite
+ARG VITE_REACT_APP_API_URL
+ENV VITE_REACT_APP_API_URL=${VITE_REACT_APP_API_URL}
 RUN npm run build
 
 # Etapa 2: Servir la aplicación con Nginx
 FROM nginx:stable-alpine
-# Copiar los archivos compilados de React
 COPY --from=build /app/dist /usr/share/nginx/html
-# Copiar la configuración personalizada de Nginx
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+# Copiar la plantilla de configuración de Nginx
+COPY nginx.conf /etc/nginx/templates/default.conf.template
+
+# El CMD ahora es un script que primero procesa la plantilla y luego inicia Nginx
+CMD /bin/sh -c "envsubst '__BACKEND_URL__' < /etc/nginx/templates/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
