--- a/petmatch-frontend/nginx.conf
+++ b/petmatch-frontend/nginx.conf
@@ -2,15 +2,14 @@ server {
     listen 80;
     server_name localhost;
 
-    # Servir los archivos estáticos de React
     location / {
         root /usr/share/nginx/html;
         try_files $uri $uri/ /index.html;
     }
 
-    # Redirigir las llamadas a la API al servicio del backend
     location /api/ {
-        proxy_pass http://backend:8080; # 'backend' es el nombre del servicio en docker-compose
+        # Usamos una variable como placeholder que será reemplazada al iniciar el contenedor
+        proxy_pass __BACKEND_URL__;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
