Cambios para Estabilizar Front

--- a/petmatch-frontend/nginx.conf
+++ b/petmatch-frontend/nginx.conf
@@ -8,8 +8,8 @@ server {
     }
 
     location /api/ {
-        # Usamos una variable como placeholder que será reemplazada al iniciar el contenedor
-        proxy_pass __BACKEND_URL__;
+        # Usamos un placeholder único que reemplazaremos
+        proxy_pass BACKEND_API_URL;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
