--- a/petmatch-frontend/nginx.prod.conf
+++ b/petmatch-frontend/nginx.prod.conf
@@ -2,19 +2,14 @@ server {
     listen 80;
     server_name localhost;
 
-    # --- ¡LA CLAVE ESTÁ AQUÍ! ---
-    # Nginx por defecto cachea las IPs. Esto le dice que use el resolver de Docker.
-    # 127.0.0.11 es el DNS interno de Docker.
-    resolver 127.0.0.11 valid=10s;
-
     location / {
         root /usr/share/nginx/html;
         try_files $uri $uri/ /index.html;
     }
 
     location /api/ {
-        # Usamos una variable para el upstream
-        set $upstream_backend http://backend:8080;
+        # En producción, la URL del backend se pasa como variable de entorno
+        set $upstream_backend __BACKEND_URL__;
         proxy_pass $upstream_backend;
 
         proxy_set_header Host $host;
