Cambios para Estabilizar Front en la creacion de mascostas

--- a/petmatch-frontend/nginx.conf
+++ b/petmatch-frontend/nginx.conf
@@ -2,6 +2,9 @@ server {
     listen 80;
     server_name localhost;
 
+    # Aumentar el límite de tamaño del cuerpo de la petición para permitir subida de fotos
+    client_max_body_size 10M;
+
     location / {
         root /usr/share/nginx/html;
         try_files $uri $uri/ /index.html;
@@ -20,5 +23,10 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Aumentar tiempos de espera para subidas lentas
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
     }
 }
