--- a/petmatch-backend/src/main/resources/application.properties
+++ b/petmatch-backend/src/main/resources/application.properties
@@ -12,6 +12,6 @@ cloudinary.cloud_name=${CLOUDINARY_CLOUD_NAME}
 cloudinary.api_key=${CLOUDINARY_API_KEY}
 cloudinary.api_secret=${CLOUDINARY_API_SECRET}
 
-# Configuración para subida de archivos
+# File Upload Configuration
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
