--- a/petmatch-frontend/package.json
+++ b/petmatch-frontend/package.json
@@ -19,6 +19,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.24.1",
     "react-spring": "^9.7.3",
+    "react-tinder-card": "^1.6.4",
     "react-use-gesture": "^9.1.3"
   },
   "devDependencies": {
