Estabilizacion de Front v2.1

--- a/petmatch-frontend/nginx.conf
+++ b/petmatch-frontend/nginx.conf
@@ -2,7 +2,6 @@ server {
     listen 80;
     server_name localhost;
 
-    # Aumentar el límite de tamaño del cuerpo de la petición para permitir subida de fotos
     client_max_body_size 10M;
 
     location / {
@@ -11,27 +10,30 @@ server {
     }
 
     location /api/ {
-        # Usar un resolver DNS público (como el de Google) para que Nginx pueda
-        # resolver los dominios de Railway.
         resolver 8.8.8.8;
-
-        # El placeholder será reemplazado por el script de inicio
         set $backend_url BACKEND_URL_PLACEHOLDER;
 
         proxy_pass $backend_url;
 
-        proxy_set_header Host $host;
+        # Cabeceras estándar para proxy
+        proxy_set_header Host $proxy_host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        # Configuración SSL para el proxy (necesario para Railway)
-        proxy_ssl_server_name on; # Habilita SNI
-        proxy_ssl_verify off;     # No verificar el certificado (opcional, pero ayuda a evitar errores)
+        # Configuración SSL crítica para Railway
+        proxy_ssl_server_name on;
+        proxy_ssl_protocols TLSv1.2 TLSv1.3;
+        proxy_ssl_verify off;
 
-        # Aumentar tiempos de espera para subidas lentas
+        # Timeouts
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
+
+        # Aumentar buffers para evitar "upstream sent too big header"
+        proxy_buffer_size 16k;
+        proxy_buffers 4 32k;
+        proxy_busy_buffers_size 64k;
     }
 }
