--- a/petmatch-frontend/package.json
+++ b/petmatch-frontend/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-leaflet": "^4.2.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.24.1",
     "react-spring": "^9.7.3",
